--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <%- include('../layout/header'); -%>
+    <%- include('./layout/header'); -%>
 
     <main>
       <section class="py-64 py-md-40">
@@ -219,7 +219,7 @@
       </section>
     </main>
 
-    <%- include('../layout/footer'); -%>
+    <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
   </body>
